--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^2.2.8",
+    "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "d3": "^7.1.0",
     "vue": "^3.0.0",
+    "vue-uuid": "^2.0.2",
+    "vuetify": "^2.5.10",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
