--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
     "d3": "^7.1.0",
+    "enumify-ts": "^2.0.2",
     "vue": "^3.0.0",
     "vue-uuid": "^2.0.2",
     "vuetify": "^2.5.10",
