--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/core-js": "^2.5.5",
     "ant-design-vue": "^2.2.8",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
