--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     ],
     "paths": {
       "@/*": [
-        "src/*"
+        "client/*"
       ]
     },
     "lib": [
@@ -27,9 +27,9 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
+    "client/**/*.ts",
+    "client/**/*.tsx",
+    "client/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
