--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@types/core-js": "^2.5.5",
     "ant-design-vue": "^2.2.8",
+    "axios": "^0.24.0",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
     "d3": "^7.1.0",
+    "dotenv": "^10.0.0",
     "enumify-ts": "^2.0.2",
     "vue": "^3.0.0",
     "vue-uuid": "^2.0.2",
